# FingerFirmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Audio/: tdm_audio.c
Comms/: can.c
Core/Inc/: stm32g431_min.h
Core/Src/: main.c  system_stm32g431.c
Sensors/: i2c_sensors.c
app/: app.c  app.h  diagnostics.c  diagnostics.h
audio/: tdm_audio.h
boards/nucleo_g431kb/: README.md  STM32G431KB_FLASH.ld
cmake/: arm-none-eabi-gcc.cmake
comms/: can.h
core/: startup.c  stm32g431_min.h  system_time.c  system_time.h  uart_log.c  uart_log.h
docs/: bringup.md
sensors/: i2c_sensors.h
tools/: check_env.sh  flash.sh  setup.sh
